# CopyPhoto

./: .gitignore  CODE_SIGNING_POLICY.md  CopyPhoto.spec  CopyPhoto.version_info  LICENSE  PRIVACY.md  README.md  build_exe.bat  build_exe.py  copyphoto_cli.py  directory_widget.py  gui.py  lab_color_palette.py  main.py  main_window.py  pyproject.toml  requirements.txt  run.bat  settings.ini  settings.py  settings_form.ui  settings_widget.py
.github/workflows/: build-windows.yml
album_processor/: __init__.py  batch.py  config.py  cropper.py  detector.py  enhancer.py  image_io.py  image_reader.py  image_validation.py  naming.py  processor.py  settings.py  settings_editor.py
copyphoto_gui/: __init__.py  directory_widget.py  main_window.py  settings_widget.py
src/copyphoto/: __init__.py  __main__.py  cli.py  file_transfer.py
src/copyphoto/album_processor/: __init__.py  batch.py  cropper.py  detector.py  enhancer.py  naming.py  processor.py  settings.py  settings_editor.py
src/copyphoto/gui/: __init__.py  __main__.py  directory_widget.py  directory_widget.ui  main.py  main_window.py  main_window.ui  processing_worker.py  settings_widget.py
tests/: test_batch.py  test_config.py  test_cropper.py  test_detector.py  test_enhancer.py  test_file_transfer.py  test_gui.py  test_image_io.py  test_image_reader.py  test_image_validation.py  test_lab_color_palette.py  test_main.py  test_naming.py  test_settings.py  test_settings_editor.py
tools/: __init__.py  lab_color_palette.py
