[project]
name = "copy-photo"
version = "0.1.0"
description = "Пакетный детектор бумажных фотографий на однотонной подложке"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pillow_heif"]
ignore_missing_imports = true
