[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "copy-photo"
version = "0.1.0"
description = "Пакетный детектор бумажных фотографий на однотонной подложке"
requires-python = ">=3.14,<3.15"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Leonid Bolshakov" },
]
dependencies = [
    "numpy==2.5.1",
    "opencv-python-headless==5.0.0.93",
    "Pillow==12.3.0",
    "pillow-heif==1.4.0",
    "PyQt6==6.11.0",
]

[project.scripts]
copyphoto = "copyphoto.cli:main"

[project.gui-scripts]
copyphoto-gui = "copyphoto.gui.main:main"

[project.urls]
Homepage = "https://github.com/LeonidBolshakov/CopyPhoto"
Repository = "https://github.com/LeonidBolshakov/CopyPhoto"
Releases = "https://github.com/LeonidBolshakov/CopyPhoto/releases"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"copyphoto.gui" = ["settings_form.ui"]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
exclude = "^(build|dist)/"

[[tool.mypy.overrides]]
module = ["pillow_heif"]
ignore_missing_imports = true
